--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="stylesheet" href="./src/style.css" />
     <title>Actividad 5: Demostración Interactiva de Clases</title>
 
   </head>
@@ -116,6 +117,6 @@
         </section>
 
     </main>
-
+<script type="module" src="src/main.ts"></script>
   </body>
 </html>
