Agregando footer y color de fondo a claro

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="app-header">
         <h1>Actividad 5: Clases en Acción</h1>
-        <p>¡Interactúa con cada uno de los ejercicios de Programación Orientada a Objetos!</p>
+        <p>Soy IssaVela-Ingrid, te invito a interactuar con cada uno de los ejercicios de Programación Orientada a Objetos</p>
     </header>
 
     <main class="main-content">
@@ -117,6 +117,9 @@
         </section>
 
     </main>
+    <footer>
+  <p>&copy; 2025 Ingrid Rubenia Vela Recinos</p>
+</footer>
 <script type="module" src="src/main.ts"></script>
   </body>
 </html>
